# morai_baqu4

./: .gitignore  .gitmodules  LICENSE  README.md  before marker 0xd9  build.sh  clean.sh  frames.gv  glim_build.sh  morai2rc  morai_network_1024.json  run.sh  sensor.json  sensor_1024.json
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/lib/pkgconfig/: baqu4_tf.pc  morai_msgs.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pcl.pc  velodyne_pointcloud.pc
devel/lib/velodyne_driver/: velodyne_node
devel/lib/velodyne_laserscan/: velodyne_laserscan_node
devel/lib/velodyne_pointcloud/: transform_node
devel/share/baqu4_tf/cmake/: baqu4_tfConfig.cmake
devel/share/gennodejs/ros/morai_msgs/msg/: _index.js
devel/share/gennodejs/ros/morai_msgs/srv/: _index.js
devel/share/morai_msgs/cmake/: morai_msgs-msg-extras.cmake  morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/velodyne_msgs/: manifest.l
devel/share/velodyne_driver/cmake/: velodyne_driverConfig.cmake
devel/share/velodyne_laserscan/cmake/: velodyne_laserscanConfig.cmake
devel/share/velodyne_msgs/cmake/: velodyne_msgs-msg-extras.cmake  velodyne_msgs-msg-paths.cmake  velodyne_msgsConfig.cmake
devel/share/velodyne_pcl/cmake/: velodyne_pclConfig.cmake
devel/share/velodyne_pointcloud/cmake/: velodyne_pointcloudConfig.cmake
rviz/: percep.rviz  planning.rviz
src/baqu4_tf/: CMakeLists.txt  package.xml
src/baqu4_tf/launch/: baqu4_tf.launch  camera.launch  gps.launch  imu.launch  lidar.launch
src/baqu4_tf/scripts/: odom.py  projection.py
src/baqu4_udp/: CMakeLists.txt  package.xml
src/baqu4_udp/launch/: ai_mission.launch  baqu4_udp.launch  final_mission.launch
src/baqu4_udp/scripts/: CollisionDataNode.py  CompetitionVehicleStatusNode.py  EgoCtrlCmdNode.py  VehicleStatusNode.py
src/control/: CMakeLists.txt  README.md  package.xml  setup.py
src/control/launch/: control.launch  path.launch
src/control/scripts/: ego_control_pub.py  global_path_pub.py  local_path_pub.py  odom.py  odom_tf_pub.py  pure_pursuit.py
src/control/src/control/: pid.py  pure_pursuit.py
src/perception/: CMakeLists.txt  README.md  package.xml
src/perception/include/: visualization.h
src/perception/include/clustering_cxx/: clustering.hxx  parameters.hxx
src/perception/include/dbscan_kdtree/: DBSCAN_kdtree.h  DBSCAN_precomp.h  DBSCAN_simple.h
src/perception/include/lidar_clustering/: kalman_iou_tracker.h  lidar_cluster_node.h  simple_tracker.h  tracker.h
src/perception/launch/: lidar_clustering.launch  lidar_clustering_tracking.launch
src/perception/msg/: SimpleObstacle.msg
src/perception/scripts/: obstacle_converter.py
src/perception/src/: clustering.cxx  clustering_with_tracking.cxx  main.cxx  tracker.cxx
src/planning/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
src/planning/data/: 25molit_main_mission.txt
src/planning/launch/: planning.launch
src/planning/msg/: PlanVelocityInfo.msg
src/planning/scripts/: global_path.py  local_path.py  obstacle_debugger.py
src/planning/src/planning_pkg/: config.py  frenet.py  frenet_path.py  fsm.py  planner.py  polynomial.py
src/sensor/launch/: lidar.launch
src/stop_sequence/: CMakeLists.txt  package.xml  requirements.txt
src/stop_sequence/config/: image_mini.rviz
src/stop_sequence/launch/: stop_line.launch  stop_sequence.launch  traffic_light.launch  visualize.launch
src/stop_sequence/scripts/: stop_line_detection.py  traffic_light_detection.py  visualize_detection.py
