<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.0.1</version>
  <description>Baqu4 Control</description>
  <maintainer email="git@github.com">baqu4</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>morai_msgs</depend>
 

  <export/>
</package>
