<?xml version="1.0"?>
<package format="2">
  <name>lidar_clustering</name>
  <version>1.0.0</version>
  <description>LiDAR point cloud clustering for MORAI simulator</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  
  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>
