<package format="2">
  <name>stop_sequence</name>
  <version>0.0.1</version>
  <description>Stop sequence package for Baqu4 project</description>

  <maintainer email="developer.ksb@gmail.com">Seungbeom Kim</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
</package>
